# mcp-tools-demo

./: .env.bak  .env.example  .env.example.bak  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
data/: README.md
mcp_app/: __init__.py  document_workflow.py  main.py
test_mcp_client/: __init__.py  client_example.py
