[project]
name = "mcp-tools-demo"
version = "0.1.0"
description = "MCP server with web search and RAG capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["mcp", "rag", "llama-index", "web-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "python-dotenv>=1.0.0",
    "linkup>=0.1.0",
    "mcp>=1.0.0",
    "llama-index>=0.10.0",
    "llama-index-llms-ollama>=0.1.0",
    "llama-index-embeddings-huggingface>=0.1.0",
    "llama-index-readers-file>=0.1.0",
    "pypdf>=3.0.0",
    "nest-asyncio>=1.5.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "sentence-transformers>=2.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/mcp-tools-demo"
Documentation = "https://github.com/yourusername/mcp-tools-demo#readme"
Repository = "https://github.com/yourusername/mcp-tools-demo"
Issues = "https://github.com/yourusername/mcp-tools-demo/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mcp_app"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

